@@ -1,0 +1,68 @@
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ This file is part of Grocy Android.
+  ~
+  ~ Grocy Android is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ Grocy Android is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with Grocy Android. If not, see <http://www.gnu.org/licenses/>.
+  ~
+  ~ Copyright (c) 2020-2021 by Patrick Zedler and Dominic Zedler
+  -->
+
+<LinearLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:id="@+id/container_row"
+  android:orientation="horizontal"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:minHeight="48dp"
+  android:clickable="true"
+  android:focusable="true"
+  android:background="@drawable/bg_list_item"
+  android:padding="16dp"
+  android:gravity="center_vertical">
+
+  <TextView
+    android:id="@+id/name"
+    style="@style/Widget.Grocy.TextView.ListItem.Title.Stock"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:singleLine="true" />
+
+  <TextView
+    android:id="@+id/note_as_name"
+    style="@style/Widget.Grocy.TextView.ListItem.Title.Stock"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:textStyle="italic"
+    android:visibility="gone" />
+
+  <TextView
+    android:id="@+id/note"
+    style="@style/Widget.Grocy.TextView.ListItem.Description"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:maxWidth="150dp"
+    android:singleLine="true"
+    android:textStyle="italic"
+    android:layout_marginEnd="10dp"
+    android:visibility="gone"/>
+
+  <TextView
+    android:id="@+id/amount"
+    style="@style/Widget.Grocy.TextView.ListItem.Description"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:singleLine="true" />
+
+</LinearLayout>
