@@ -1,0 +1,92 @@
+<?xml version="1.0" encoding="utf-8"?><!--
+  ~ This file is part of Grocy Android.
+  ~
+  ~ Grocy Android is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ Grocy Android is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with Grocy Android. If not, see <http://www.gnu.org/licenses/>.
+  ~
+  ~ Copyright (c) 2020-2021 by Patrick Zedler and Dominic Zedler
+  -->
+
+<LinearLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:id="@+id/linear__container"
+  android:orientation="horizontal"
+  android:layout_width="match_parent"
+  android:layout_height="wrap_content"
+  android:minHeight="48dp"
+  android:clickable="true"
+  android:focusable="true"
+  android:background="@drawable/bg_list_item"
+  android:padding="16dp"
+  android:gravity="center_vertical">
+
+  <LinearLayout
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:orientation="horizontal"
+    android:gravity="start">
+
+    <TextView
+      android:id="@+id/text__name"
+      style="@style/Widget.Grocy.TextView.ListItem.Title.Stock"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center_vertical"
+      android:singleLine="true" />
+
+    <View
+      android:id="@+id/view__on_shopping_list"
+      android:layout_width="5dp"
+      android:layout_height="5dp"
+      android:layout_gravity="center_vertical"
+      android:layout_marginTop="1dp"
+      android:layout_marginStart="6dp"
+      android:visibility="gone"
+      android:background="@drawable/shape_circle"
+      android:backgroundTint="@color/retro_blue_fg" />
+
+  </LinearLayout>
+
+  <TextView
+    android:id="@+id/text__amount"
+    style="@style/Widget.Grocy.TextView.ListItem.Description"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:singleLine="true" />
+
+  <LinearLayout
+    android:id="@+id/linear__days"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_marginStart="10dp">
+
+    <View
+      android:layout_width="3dp"
+      android:layout_height="3dp"
+      android:layout_gravity="center_vertical"
+      android:layout_marginEnd="10dp"
+      android:backgroundTint="@color/on_background_secondary"
+      android:background="@drawable/shape_circle" />
+
+    <TextView
+      android:id="@+id/text__days"
+      style="@style/Widget.Grocy.TextView.ListItem.Description"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:singleLine="true" />
+
+  </LinearLayout>
+
+</LinearLayout>
